# SOKOBAN-TubesSDA-P--K7

./: .gitignore  LICENSE  Makefile.win  Note.txt  README.md  SOKOBANGAME.dev  SOKOBANGAME.layout  SokobanGame_private.rc  SokobanGame_private.res
SOKOBANGAME/: CMakeLists.txt  Makefile.win  SOKOBANGAME.dev  SOKOBANGAME.layout  SOKOBANGAME_private.h  SOKOBANGAME_private.res  build.ps1  installrequirement.ps1  main.c  sokoban.execls  sokoban.h  testPage.c
SOKOBANGAME/ARENA_LOGIC/: Level.c  Level.h  RoomFactory.c  RoomFactory.h
SOKOBANGAME/DATABASE/: DataHierarki.c  DataHierarki.h  DatabasePath.h  PlayData.txt  PlayDataAccess.c  PlayDataAccess.h  PlayDataManager.c  PlayDataManager.h  PlayData_sortedName.txt  PlayData_sortedScore.txt  Player.c  Player.h  saveState_index.txt  temp_PlayData.txt
SOKOBANGAME/GAMEPLAY/ARENA_LOGIC/: ChapterManager.c  ChapterManager.h  Level.c  Level.h  RoomFactory.c  RoomFactory.h  TreeChapter.c  TreeChapter.h
SOKOBANGAME/GAMEPLAY/DB_ACCESS/: SaveState.c  SaveState.h
SOKOBANGAME/GAMEPLAY/GAME_LOGIC/: ButtonGame.c  ButtonGame.h  GameLogic.c  GameLogic.h  GameStart.c  GameStart.h  ScoreGame.c  ScoreGame.h  UndoGame.c  UndoGame.h
SOKOBANGAME/GAMEPLAY/REPLAY_LOGIC/: ReplayGame.c  ReplayGame.h
SOKOBANGAME/STRUCTURES/: list.c  list.h  queue.c  queue.h  stack.c  stack.h  tree.c  tree.h
SOKOBANGAME/UTILS/: build.ps1  compilewithoutcmake.bat  soundmanager.c  soundmanager.h
SOKOBANGAME/UTILS/auth/: authentication.c  authentication.h
SOKOBANGAME/UTILS/include/: boolean.h  curses.h
SOKOBANGAME/UTILS/sound/: soundmanager.c  soundmanager.h
SOKOBANGAME/UTILS/validator/: validator.c  validator.h
SOKOBANGAME/Utilities/include/: boolean.h
SOKOBANGAME/VIEW/: HistoryScreen.c  HistoryScreen.h  HistoryScreen.htemp  JohansFileTemp.c  LevelScreen.h  chapterscreen.c  chapterscreen.h  leaderboard.c  leaderboard.h  levelgridview.c  levelgridview.h  levelscreen.c  levelscreen.h  lobbyaltscreen.c  lobbyaltscreen.h  lobbyscreen.c  lobbyscreen.h  tutorial.c  tutorial.h  viewtoolkit.c  viewtoolkit.h
